--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -42,9 +42,8 @@ body {
 
 @import url("https://fonts.googleapis.com/css2?family=Vujahday+Script&display=swap");
 
-/* Metadata: Theme details and author information */
 body {
-  font-family: sans-serif; /* Default font */
+  font-family: sans-serif;
   font-size: 18px;
   font-weight: 360;
   color: #888;
@@ -56,7 +55,7 @@ body {
 }
 
 body.dark-mode {
-  font-family: sans-serif; /* Default font for dark mode */
+  font-family: "Vujahday Script", cursive;
   font-size: 18px;
   font-weight: 360;
   color: #888;
@@ -67,27 +66,21 @@ body.dark-mode {
   background-image: url("../imgs/backgrounds/vecteezy_abstract-purple-gradient-texture-with-geometric-elements_7355486.jpg");
 }
 
-body.dark-mode.custom-font {
-  font-family: "Vujahday Script", cursive; /* Font to switch to in dark mode */
-}
-
-
 body.custom-font {
-  font-family: "Vujahday Script", cursive; /* Font to switch to */
+  font-family: "Vujahday Script", cursive;
 }
 
-/* Button styling */
 .font-toggle-button {
   padding: 10px 20px;
   border: none;
-  background-color: #007bff; /* Button color */
+  background-color: #007bff;
   color: white;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .font-toggle-button:hover {
-  background-color: #0056b3; /* Darker shade on hover */
+  background-color: #0056b3;
 }
 
 body.dark-mode a {
@@ -183,7 +176,7 @@ body.dark-mode a:hover {
 
 .navbar-no-bg {
   padding-top: 10px;
-  background-color: rgba(68, 68, 68, 0.8); /* Black background with 80% opacity */
+  background-color: rgba(68, 68, 68, 0.8);
 }
 
 ul.navbar-nav {
@@ -241,7 +234,6 @@ body.dark-mode a:hover {
   color: #1a000b;
 }
 
-/* Doctor Who List? */
 .dw1 {
   text-align: center;
   margin: auto;
@@ -251,7 +243,6 @@ body.dark-mode a:hover {
   font-size: 22px;
 }
 
-/* Footer */
 footer {
   padding: 40px 0 45px 0;
   background: none;
@@ -274,7 +265,7 @@ footer {
 
 footer {
   position: fixed;
-  color: white; /* October Background Footer Color */
+  color: white;
   bottom: 0;
   width: 100%;
   height: 13%;
@@ -285,7 +276,6 @@ center {
   margin: 0 auto;
 }
 
-/* Project List */
 div.pl {
   text-align: center;
   padding: 260px;
@@ -299,7 +289,6 @@ ul.plul {
   text-align: left;
 }
 
-/* About */
 .about {
   text-align: center;
   margin: auto;
@@ -344,7 +333,6 @@ aboutvideo {
   opacity: 65%;
 }
 
-/* The Background Box On Most Pages */
 .bgbox {
   background: #ff96b4;
   border-radius: 25px;
@@ -386,6 +374,24 @@ body.dark-mode .bgboxfooter {
 section:hover {
   transform: scale(1.02);
 }
+
+/* Button styles */
+.enter-button {
+  background-color: #cebaef; /* Main button color */
+  color: #fff; /* Text color */
+  border: none; /* No border */
+  border-radius: 5px; /* Rounded corners */
+  padding: 10px 20px; /* Padding */
+  cursor: pointer; /* Pointer cursor on hover */
+  transition: background-color 0.3s; /* Transition for hover effect */
+}
+
+/* Button hover effect */
+.enter-button:hover {
+  background-color: #c4a1e1; /* Slightly darker shade for hover */
+}
+
+
 
 @media (max-width: 768px) {
   body {
