test link colors for dark mode

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -200,15 +200,15 @@ a:hover {
 }
 
 body.dark-mode a:link {
-  color: #3b001b;
+  color: #c4a1e1;
 }
 
 body.dark-mode a:visited {
-  color: #3b001b;
+  color: #c4a1e1;
 }
 
 body.dark-mode a:hover {
-  color: #1a000b;
+  color: #9f6aca;
 }
 
 .dw1 {
