Test text color for links

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -200,15 +200,15 @@ a:hover {
 }
 
 body.dark-mode a:link {
-  color: #c4a1e1;
+  color: #8944c2;
 }
 
 body.dark-mode a:visited {
-  color: #c4a1e1;
+  color: #8944c2;
 }
 
 body.dark-mode a:hover {
-  color: #9f6aca;
+  color: #7b1ec7;
 }
 
 .dw1 {
