Found a color for dark mode links

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -200,15 +200,15 @@ a:hover {
 }
 
 body.dark-mode a:link {
-  color: #8944c2;
+  color: #cf95ff;
 }
 
 body.dark-mode a:visited {
-  color: #8944c2;
+  color: #cf95ff;
 }
 
 body.dark-mode a:hover {
-  color: #7b1ec7;
+  color: #9f6aca;
 }
 
 .dw1 {
