--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -8,7 +8,7 @@
         <p>I prefer to go by Tee, Riya, Rhea, or Kara.</p>
         <p>My preferred pronouns are She/They</p>
         <p>
-          Shows & Movies I like include, Doctor Who, DC Universe, Marvel
+          Shows & Movies I like include, Doctor Who, Supernatural, DC Universe, Marvel
           Universe.
         </p>
         <p>Games I like include, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
