--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,87 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      http-equiv="Cache-Control"
-      content="no-cache, no-store, must-revalidate"
-    />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>{{ .Title }}</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="{{ "/assets/js/dark-mode.js" | relURL }}"></script>
+    <script src="{{ "/assets/js/namewriter.js" | relURL }}"></script>
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />
-    <link
-      rel="stylesheet"
-      href="/assets/font-awesome/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/assets/css/animate.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
     <link rel="shortcut icon" href="/assets/imgs/pfps/favicon.png" />
-  </head>
+</head>
 
-  <body>
-    <nav
-      class="navbar navbar-inverse navbar-fixed-top navbar-no-bg"
-      role="navigation"
-    >
-      <div class="container">
-        <div class="navbar-header">
-          <button
-            type="button"
-            class="navbar-toggle collapsed"
-            data-toggle="collapse"
-            data-target="#top-navbar-1"
-          >
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/" style="color: white">
-            Tee
-            <img
-              id="dcstat"
-              alt="Status"
-              width="75"
-              style="margin-left: 55px; margin-top: -17px"
-            />
-            <script src="/assets/js/lanyard.js"></script>
-          </a>
-          <link rel="home" href="/" />
+<body>
+    <nav class="navbar navbar-inverse navbar-fixed-top navbar-no-bg" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/" style="color: white">
+                    <span id="dynamic-name" style="margin-left: 14px;">Tee</span>
+                    <img id="dcstat" alt="Status" width="75" style="margin-left: 74px; margin-top: -17px"/>
+                    <script src="/assets/js/lanyard.js"></script>
+                </a>
+                <link rel="home" href="/" />
+            </div>
+            <div class="collapse navbar-collapse" id="top-navbar-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a class="btn btn-link-3" href="/">Home</a></li>
+                    <li><a class="btn btn-link-3" href="/about">About</a></li>
+                    <li><a class="btn btn-link-3" href="/projects">Projects</a></li>
+                    <li><a class="btn btn-link-3" href="/discord">Discord</a></li>
+                    <li><a class="btn btn-link-3" href="/pages">Pages</a></li>
+                    <li><a class="btn btn-link-3" href="/credits">Credits</a></li>
+                    <li><a class="btn btn-link-3" id="toggle-dark-mode" onclick="toggleDarkMode()">🌙</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="collapse navbar-collapse" id="top-navbar-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a class="btn btn-link-3" href="/">Home</a></li>
-            <li><a class="btn btn-link-3" href="/about">About</a></li>
-            <li><a class="btn btn-link-3" href="/projects">Projects</a></li>
-            <li><a class="btn btn-link-3" href="/discord">Discord</a></li>
-            <li><a class="btn btn-link-3" href="/pages">Pages</a></li>
-            <li><a class="btn btn-link-3" href="/credits">Credits</a></li>
-            <li><a class="btn btn-link-3" id="toggle-dark-mode" onclick="toggleDarkMode()">🌙</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    {{ block "main" . }} {{ end }}
+      </nav>
+      {{ block "main" . }} {{ end }}
     <footer>
-      <div class="container">
-        <div class="bgboxfooter">
-          <div class="row">
-            &copy;
-            <b
-              >2024
-              <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All
-              rights reserved. Made with 🩷 by
-              <a href="https://github.com/tayrp">Tee</a></b
-            >
-          </div>
+        <div class="container">
+            <div class="bgboxfooter">
+                <div class="row">
+                    &copy;
+                    <b>2024
+                        <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All rights reserved. Made with 🩷 by
+                        <a href="https://github.com/tayrp">Tee</a>
+                    </b>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
-  </body>
+</body>
 </html>
