--- a/static/assets/css/about/style.css
+++ b/static/assets/css/about/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
+
 body {
   overflow: hidden;
   display: flex;
