--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -40,10 +40,14 @@ body {
 }
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Vujahday+Script&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Vujahday+Script&display=swap"); */
+/* @import url('https://fonts.googleapis.com/css2?family=Silka:wght@400;700&display=swap'); */
+@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 
 body {
-  font-family: "Vujahday Script", cursive;
+  /* font-family: "Vujahday Script", cursive; */
+  /* font-family: 'Silka'; */
+  font-family: "VT323", monospace;
   font-size: 18px;
   font-weight: 360;
   color: #888;
