Updated hugo.toml and home

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -4,14 +4,15 @@
       <div class="home">
         <b id="date-time">time</b>
         <script src="/assets/js/timezone.js"></script>
-        <p>Hello and Welcome, You may call me Tee.</p>
+        <script src="{{ "/assets/js/namewriter.js" | relURL }}"></script>
+        <p>Hello and Welcome to my Website!</p>
         <p>I prefer to go by Valerie, Tee, Riya, Rhea, or Kara.</p>
         <p>My preferred pronouns are She/Her and They/Them</p>
         <p>
           Shows & Movies I like include, Doctor Who, Dexter, DC Universe(s), Marvel
           Universe(s).
         </p>
-        <p>Games I like include, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
+        <p>Games I like include, FiveM, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
         <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline RP</a> and <a href="https://discord.gg/circuit">Circuit V2</a></p>
         <p style="font-size: 20px">
           <a href="https://nohello.net/en/">NoHello</a> |
