--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -12,6 +12,7 @@
           Shows & Movies I like include, Doctor Who, Dexter, DC Universe(s), Marvel
           Universe(s).
         </p>
+        <p>Founder & Owner of Rose Haven (FiveM) & Haven Network (Gaming Network) ~ Inactive Projects</p>
         <p>Games I like include, FiveM, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
         <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline RP</a> and <a href="https://discord.gg/circuit">Circuit V2</a></p>
         <p style="font-size: 20px">
