--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -14,7 +14,7 @@
         </p>
         <p>Founder & Owner of Rose Haven (FiveM) & Haven Network (Gaming Network) ~ Inactive Projects</p>
         <p>Games I like include, FiveM, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
-        <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline RP</a> and <a href="https://discord.gg/circuit">Circuit V2</a></p>
+        <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline RP</a>, <a href="https://discord.gg/circuit">Circuit V2-V3</a>, and <a href="https://discord.gg/bstarrp">B⭐RP</a>.</p>
         <p style="font-size: 20px">
           <a href="https://nohello.net/en/">NoHello</a> |
           <a href="https://dontasktoask.com/">DontAskToAsk</a> |
