--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -8,6 +8,7 @@
         <p>Hello and Welcome to my Website!</p>
         <p>I prefer to go by Valerie, Tee, Riya, Rhea, or Kara.</p>
         <p>My preferred pronouns are She/Her and They/Them</p>
+        <p>I identify as Transgender and Pansexual.</p>
         <p>
           Shows & Movies I like include, Doctor Who, Dexter, DC Universe(s), Marvel
           Universe(s).
@@ -15,6 +16,9 @@
         <p>Founder & Owner of Rose Haven (FiveM) & Haven Network (Gaming Network) ~ Inactive Projects</p>
         <p>Games I like include, FiveM, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
         <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline RP</a>, <a href="https://discord.gg/circuit">Circuit V2-V3</a>, and <a href="https://discord.gg/bstarrp">B⭐RP</a>.</p>
+        <p style="font-size: 15px">
+          <p>🏳️‍⚧️|💙🩷🤍🩷💙|🩷💛💙</p>
+        </p>
         <p style="font-size: 20px">
           <a href="https://nohello.net/en/">NoHello</a> |
           <a href="https://dontasktoask.com/">DontAskToAsk</a> |
