Updated credits, added buttons, portfolio, and css

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 <main>
-  <div class="bgbox">
+  <div class="content-container">
+    <div class="bgbox">
       <div class="home">
         <b id="date-time">time</b>
         <script src="/assets/js/timezone.js"></script>
@@ -8,14 +9,10 @@
         <p>Hello and Welcome to my Website!</p>
         <p>I prefer to go by Valerie, Tee, Riya, Rhea, or Kara.</p>
         <p>My preferred pronouns are She/Her and They/Them</p>
-        <p>I identify as Transgender and Pansexual.</p>
-        <p>
-          Shows & Movies I like include, Doctor Who, Dexter, DC Universe(s), Marvel
-          Universe(s).
-        </p>
-        <p>Founder & Owner of Rose Haven (FiveM) & Haven Network (Gaming Network) ~ Inactive Projects</p>
+        <p>Shows & Movies I like include, Doctor Who, Dexter, DC Universe(s), Marvel Universe(s).</p>
+        <p>Founder & Owner of Rose Haven (FiveM) & Haven Network (Gaming Network)</p>
         <p>Games I like include, FiveM, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
-        <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline RP</a>, <a href="https://discord.gg/circuit">Circuit V2-V3</a>, and <a href="https://discord.gg/bstarrp">B⭐RP</a>.</p>
+        <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline RP</a>, <a href="https://discord.gg/circuit">Circuit V2-V3</a>, <a href="https://discord.gg/CGaspfPh3s">EMW RP</a>, and <a href="https://discord.gg/bstarrp">B⭐RP</a>.</p>
         <p style="font-size: 15px">
           <p>🏳️‍⚧️|💙🩷🤍🩷💙|🩷💛💙</p>
         </p>
@@ -27,5 +24,20 @@
       </div>
     </div>
   </div>
+
+  <!-- Sidebar outside bgbox -->
+  <p>Some buttons to FiveM communities.</p>
+  <div class="sidebar">
+    <a href="https://discord.gg/YhDB8UH9xN" target="_blank">
+      <img src="/assets/imgs/other/emwrp.png" class="social-logo" alt="East Meets West Roleplay">
+    </a>
+    <a href="https://discord.gg/redlinerp" target="_blank">
+      <img src="/assets/imgs/other/redlinerp.png" class="social-logo" alt="Redline Roleplay">
+    </a>
+    <a href="https://discord.gg/circuit" target="_blank">
+      <img src="/assets/imgs/other/circuitrp.webp" class="social-logo" alt="Circuit Roleplay">
+    </a>
+  </div>
+
 </main>
 {{ end }}
