--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -12,32 +12,31 @@
         <p>Shows & Movies I like include, Doctor Who, Dexter, DC Universe(s), Marvel Universe(s).</p>
         <p>Founder & Owner of Rose Haven (FiveM) & Haven Network (Gaming Network)</p>
         <p>Games I like include, FiveM, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
-        <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline RP</a>, <a href="https://discord.gg/circuit">Circuit V2-V3</a>, <a href="https://discord.gg/CGaspfPh3s">EMW RP</a>, and <a href="https://discord.gg/bstarrp">B⭐RP</a>.</p>
+        <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline</a>, <a href="https://discord.gg/circuit">Circuit</a>, and <a href="https://discord.gg/distinctrp">Distinct</a>.</p>
         <p style="font-size: 15px">
           <p>🏳️‍⚧️|💙🩷🤍🩷💙|🩷💛💙</p>
         </p>
         <p style="font-size: 20px">
           <a href="https://nohello.net/en/">NoHello</a> |
           <a href="https://dontasktoask.com/">DontAskToAsk</a> |
-          <a href="https://xyproblem.info/">XYProblem</a>
+          <a href="https://xyproblem.info/">XYProblem</a>--
         </p>
       </div>
     </div>
   </div>
-
-  <!-- Sidebar outside bgbox -->
-  <p>Some buttons to FiveM communities.</p>
   <div class="sidebar">
-    <a href="https://discord.gg/YhDB8UH9xN" target="_blank">
-      <img src="/assets/imgs/other/emwrp.png" class="social-logo" alt="East Meets West Roleplay">
+    <a href="https://discord.gg/cyS2TpmYpr" target="_blank">
+      <img src="https://cdn.discordapp.com/icons/1168200247189708861/f83f6965caafb5a9db3a28c8fd1fddd4.webp?size=4096" class="social-logo" alt="Rose Haven">
+    </a>
+    <a href="https://discord.gg/distinctrp" target="_blank">
+      <img src="https://cdn.discordapp.com/icons/743481695835258990/5afa12f9a2c2ca5d67b4f504739a63c6.webp?size=512" class="social-logo" alt="Distinct">
     </a>
     <a href="https://discord.gg/redlinerp" target="_blank">
-      <img src="/assets/imgs/other/redlinerp.png" class="social-logo" alt="Redline Roleplay">
+      <img src="/assets/imgs/other/redlinerp.png" class="social-logo" alt="Redline">
     </a>
     <a href="https://discord.gg/circuit" target="_blank">
-      <img src="/assets/imgs/other/circuitrp.webp" class="social-logo" alt="Circuit Roleplay">
+      <img src="/assets/imgs/other/circuitrp.webp" class="social-logo" alt="Circuit">
     </a>
   </div>
-
 </main>
 {{ end }}
