idk what to put rn

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/" style="color: white">
-                    <span id="dynamic-name" style="margin-left: 14px;">Tee</span>
+                    <span id="dynamic-name" style="margin-left: 14px;">Valerie</span>
                     <img id="dcstat" alt="Status" width="75" style="margin-left: 74px; margin-top: -17px"/>
                     <script src="/assets/js/lanyard.js"></script>
                 </a>
@@ -56,8 +56,8 @@
                 <div class="row">
                     &copy;
                     <b>2024
-                        <a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All rights reserved. Made with 🩷 by
-                        <a href="https://github.com/tayrp">Tee</a>
+                        <a href="https://github.com/tayrp/tayrp.github.io">tayrp</a>. All rights reserved. Made with 🩷 by
+                        <a href="https://github.com/tayrp">Valerie</a>
                     </b>
                 </div>
             </div>
