--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -7,7 +7,7 @@
         <script src="/assets/js/timezone.js"></script>
         <script src="{{ "/assets/js/namewriter.js" | relURL }}"></script>
         <p>Hello and Welcome to my Website!</p>
-        <p>I prefer to go by Valerie, Tee, Riya, Rhea, or Kara.</p>
+        <p>I prefer to go by Valerie</p>
         <p>My preferred pronouns are She/Her and They/Them</p>
         <p>Shows & Movies I like include, Doctor Who, Dexter, DC Universe(s), Marvel Universe(s).</p>
         <p>Founder & Owner of Rose Haven (FiveM) & Haven Network (Gaming Network)</p>
@@ -19,12 +19,12 @@
         <p style="font-size: 20px">
           <a href="https://nohello.net/en/">NoHello</a> |
           <a href="https://dontasktoask.com/">DontAskToAsk</a> |
-          <a href="https://xyproblem.info/">XYProblem</a>--
+          <a href="https://xyproblem.info/">XYProblem</a>
         </p>
       </div>
     </div>
   </div>
-  <div class="sidebar">
+  <!-- <div class="sidebar">
     <a href="https://discord.gg/cyS2TpmYpr" target="_blank">
       <img src="https://cdn.discordapp.com/icons/1168200247189708861/f83f6965caafb5a9db3a28c8fd1fddd4.webp?size=4096" class="social-logo" alt="Rose Haven">
     </a>
@@ -36,7 +36,7 @@
     </a>
     <a href="https://discord.gg/circuit" target="_blank">
       <img src="/assets/imgs/other/circuitrp.webp" class="social-logo" alt="Circuit">
-    </a>
+    </a> -->
   </div>
 </main>
 {{ end }}
