--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -44,7 +44,7 @@
                     <li><a class="btn btn-link-3" href="/discord">Discord</a></li>
                     <li><a class="btn btn-link-3" href="/pages">Pages</a></li>
                     <li><a class="btn btn-link-3" href="/credits">Credits</a></li>
-                    <li><a class="btn btn-link-3" id="toggle-dark-mode" onclick="toggleDarkMode()">🌙</a></li>
+                <!--<li><a class="btn btn-link-3" id="toggle-dark-mode" onclick="toggleDarkMode()">🌙</a></li>-->
                 </ul>
             </div>
         </div>
