--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <!--
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,9 +19,12 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
     <link rel="shortcut icon" href="/assets/imgs/pfps/favicon.png" />
-</head>
+    -->
+    <meta http-equiv="refresh" content="0; url=https://valerie.lol" />
+  </head>
 
-<body>
+  <body>
+    <!--
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-no-bg" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -44,7 +48,6 @@
                     <li><a class="btn btn-link-3" href="/discord">Discord</a></li>
                     <li><a class="btn btn-link-3" href="/pages">Pages</a></li>
                     <li><a class="btn btn-link-3" href="/credits">Credits</a></li>
-                <!--<li><a class="btn btn-link-3" id="toggle-dark-mode" onclick="toggleDarkMode()">🌙</a></li>-->
                 </ul>
             </div>
         </div>
@@ -63,5 +66,9 @@
             </div>
         </div>
     </footer>
-</body>
+    -->
+    <script>
+      window.location.href = "https://valerie.lol";
+    </script>
+  </body>
 </html>
