--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -54,7 +54,7 @@
 
 <body>
     <div class="big-red-notice">
-        🚨 NEW WEBSITE ALERT: This site has moved to <a href="https://valerie.lol">https://valerie.lol</a> 🚨
+        NEW WEBSITE NOTICE: I have a new website! <a href="https://valerie.lol">https://valerie.lol</a>
     </div>
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-no-bg" role="navigation">
         <div class="container">
