--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -54,7 +54,7 @@
 
 <body>
     <div class="big-red-notice">
-        NEW WEBSITE NOTICE: I have a new website! <a href="https://valerie.lol">https://valerie.lol</a>
+        NOTICE: I have a new website! <a href="https://valerie.lol">https://valerie.lol</a>
     </div>
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-no-bg" role="navigation">
         <div class="container">
@@ -73,8 +73,9 @@
             </div>
             <div class="collapse navbar-collapse" id="top-navbar-1">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a class="btn btn-link-3" href="https://valerie.lol/">New Site</a></li>
                     <li><a class="btn btn-link-3" href="/">Home</a></li>
-                    <li><a class="btn btn-link-3" href="/about">About</a></li>
+                <!--<li><a class="btn btn-link-3" href="/about">About</a></li>-->
                     <li><a class="btn btn-link-3" href="/projects">Projects</a></li>
                     <li><a class="btn btn-link-3" href="/discord">Discord</a></li>
                     <li><a class="btn btn-link-3" href="/pages">Pages</a></li>
