--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -8,9 +8,8 @@
         <script src="{{ "/assets/js/namewriter.js" | relURL }}"></script>
         <p>Hello and Welcome to my Website!</p>
         <p>I prefer to go by Valerie</p>
-        <p>My preferred pronouns are She/Her and They/Them</p>
+        <p>My pronouns are She/Her and They/Them</p>
         <p>Shows & Movies I like include, Doctor Who, Dexter, DC Universe(s), Marvel Universe(s).</p>
-        <p>Games I like include, FiveM, Minecraft, Terraria, BeamNG.drive and DayZ.</p>
         <!-- <p>I enjoy GTA V RP, I am whitelisted on <a href="https://discord.gg/redlinerp">Redline</a>, <a href="https://discord.gg/circuit">Circuit</a>, and <a href="https://discord.gg/distinctrp">Distinct</a>.</p> -->
         <p style="font-size: 15px">
           <p>🏳️‍⚧️|💙🩷🤍🩷💙|🩷💛💙</p>
